modules/security_group/main.tf
# Définition du groupe de sécurité
resource "aws_security_group" "my_security_group" {
  name        = var.security_group_name
  description = "Security group allowing ports 80, 443, and 22"

# Règles entrantes pour ouvrir les ports 80, 443 et 22 et traffic sortant vers internet
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
